--- a/src/app/apple/apple.module.css
+++ b/src/app/apple/apple.module.css
@@ -75,3 +75,23 @@
   border: 1px solid black;
   width: 100%;
 }
+
+.modal_overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.modal_container {
+  background: white;
+  padding: 2rem;
+  border-radius: 1rem;
+  text-align: center;
+}
